realised many actions

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "test-app-01",
+  "name": "todolist-v3.0",
+  "homepage": "https://Pikadorius.github.io/todolist-v3.0",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +12,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/uuid": "^8.3.4",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -22,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run deploy",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
