--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "todolist-v3.0",
-  "homepage": "https://Pikadorius.github.io/todolist-v3.0",
+  "name": "todolist3",
+  "homepage": "https://Pikadorius.github.io/todolist3",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
