--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "todolist3",
-  "homepage": "https://Pikadorius.github.io/todolist3",
+  "homepage": "https://pikadorius.github.io/todolist3/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run deploy",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
